--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div id="connectContainer" class="hidden">
         <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
-        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code to connect">
+        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)">
         <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600">Connect</button>
         <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600">Back</button>
       </div>
@@ -41,7 +41,6 @@
     </div>
   </div>
   <script>
-    // Utility to compute SHA-256 hash for deduplication
     async function sha256(str) {
       const buffer = new TextEncoder().encode(str);
       const hash = await crypto.subtle.digest('SHA-256', buffer);
@@ -67,6 +66,11 @@
       return username && regex.test(username);
     }
 
+    function validateCode(code) {
+      const regex = /^[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}$/;
+      return code && regex.test(code);
+    }
+
     let code = generateCode();
     let clientId = '';
     let isInitiator = false;
@@ -83,6 +87,10 @@
     let processedAnswers = new Set();
     let username = null;
     let usernames = new Map();
+    let joinTimeout = null;
+    let wsReconnectAttempts = 0;
+    const maxWsReconnectAttempts = 3;
+    const wsReconnectInterval = 5000;
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -94,107 +102,127 @@
     const maxClientsContainer = document.getElementById('maxClientsContainer');
     statusElement.textContent = 'Start a new chat or connect to an existing one';
 
-    const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
+    let socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
     console.log('WebSocket created');
 
-    socket.onopen = () => {
-      console.log('WebSocket opened');
-      statusElement.textContent = 'Start a new chat or connect to an existing one';
-    };
-
-    socket.onerror = (error) => {
-      statusElement.textContent = 'WebSocket error. Please try again.';
-      console.error('WebSocket error:', error);
-      connectionTimeouts.forEach((timeout) => clearTimeout(timeout));
-    };
-
-    socket.onclose = () => {
-      statusElement.textContent = 'WebSocket closed. Please refresh.';
-      console.error('WebSocket closed');
-      connectionTimeouts.forEach((timeout) => clearTimeout(timeout));
-      isInitiator = false;
-      maxClientsContainer.classList.add('hidden');
-    };
-
-    socket.onmessage = (event) => {
-      console.log('Received WebSocket message:', event.data);
-      try {
-        const message = JSON.parse(event.data);
-        console.log('Parsed message:', message);
-        if (message.type === 'error') {
-          statusElement.textContent = message.message;
-          console.error('Server error:', message.message);
-          if (message.message.includes('Chat is full') || message.message.includes('Username already taken')) {
-            socket.close();
-            initialContainer.classList.remove('hidden');
-            usernameContainer.classList.add('hidden');
-            connectContainer.classList.add('hidden');
-            codeDisplayElement.classList.add('hidden');
-            chatContainer.classList.add('hidden');
-            newSessionButton.classList.add('hidden');
-            maxClientsContainer.classList.add('hidden');
-          }
-          return;
-        }
-        if (message.type === 'init') {
-          clientId = message.clientId;
-          maxClients = message.maxClients;
-          isInitiator = message.isInitiator;
-          totalClients = 1;
-          console.log(`Initialized client ${clientId}, username: ${username}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
-          usernames.set(clientId, username);
-          console.log(`Set own username: ${username} for client ${clientId}, usernames: ${[...usernames.entries()]}`);
-          initializeMaxClientsUI();
-          updateMaxClientsUI();
-        }
-        if (message.type === 'initiator-changed') {
-          console.log(`Initiator changed to ${message.newInitiator} for code: ${code}`);
-          isInitiator = message.newInitiator === clientId;
-          initializeMaxClientsUI();
-          updateMaxClientsUI();
-        }
-        if (message.type === 'join-notify' && message.code === code) {
-          totalClients = message.totalClients;
-          console.log(`Join-notify received for code: ${code}, client: ${message.clientId}, total: ${totalClients}, maxClients: ${maxClients}, username: ${message.username}`);
-          if (message.username) {
-            usernames.set(message.clientId, message.username);
-            console.log(`Updated usernames: ${message.clientId} -> ${message.username}, usernames: ${[...usernames.entries()]}`);
-          }
-          updateMaxClientsUI();
-          if (isInitiator && message.clientId !== clientId && !peerConnections.has(message.clientId)) {
-            console.log(`Initiating peer connection with client ${message.clientId}`);
-            startPeerConnection(message.clientId, true);
-          }
-        }
-        if (message.type === 'client-disconnected') {
-          totalClients = message.totalClients;
-          console.log(`Client ${message.clientId} disconnected from code: ${code}, total: ${totalClients}`);
-          usernames.delete(message.clientId);
-          console.log(`Removed username for client ${message.clientId}, usernames: ${[...usernames.entries()]}`);
-          cleanupPeerConnection(message.clientId);
-          updateMaxClientsUI();
-        }
-        if (message.type === 'max-clients') {
-          maxClients = message.maxClients;
-          console.log(`Max clients updated to ${maxClients} for code: ${code}`);
-          updateMaxClientsUI();
-        }
-        if (message.type === 'offer' && message.clientId !== clientId) {
-          console.log(`Received offer from ${message.clientId} for code: ${code}`);
-          handleOffer(message.offer, message.clientId);
-        }
-        if (message.type === 'answer' && message.clientId !== clientId) {
-          console.log(`Received answer from ${message.clientId} for code: ${code}`);
-          handleAnswer(message.answer, message.clientId);
-        }
-        if (message.type === 'candidate' && message.clientId !== clientId) {
-          console.log(`Received ICE candidate from ${message.clientId} for code: ${code}`);
-          handleCandidate(message.candidate, message.clientId);
-        }
-      } catch (error) {
-        console.error('Error parsing message:', error);
+    function reconnectWebSocket() {
+      if (wsReconnectAttempts < maxWsReconnectAttempts) {
+        wsReconnectAttempts++;
+        console.log(`Reconnecting WebSocket, attempt ${wsReconnectAttempts}/${maxWsReconnectAttempts}`);
+        socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
+        setupWebSocket();
+      } else {
+        console.error('Max WebSocket reconnect attempts reached');
+        statusElement.textContent = 'Cannot connect to server. Please refresh.';
       }
-    };
+    }
+
+    function setupWebSocket() {
+      socket.onopen = () => {
+        console.log('WebSocket opened');
+        wsReconnectAttempts = 0;
+        statusElement.textContent = 'Start a new chat or connect to an existing one';
+      };
+
+      socket.onerror = (error) => {
+        console.error('WebSocket error:', error);
+        statusElement.textContent = 'WebSocket error. Attempting to reconnect...';
+        setTimeout(reconnectWebSocket, wsReconnectInterval);
+      };
+
+      socket.onclose = () => {
+        console.error('WebSocket closed');
+        statusElement.textContent = 'WebSocket closed. Attempting to reconnect...';
+        setTimeout(reconnectWebSocket, wsReconnectInterval);
+        connectionTimeouts.forEach((timeout) => clearTimeout(timeout));
+        isInitiator = false;
+        maxClientsContainer.classList.add('hidden');
+      };
+
+      socket.onmessage = (event) => {
+        console.log('Received WebSocket message:', event.data);
+        try {
+          const message = JSON.parse(event.data);
+          console.log('Parsed message:', message);
+          if (message.type === 'error') {
+            statusElement.textContent = message.message;
+            console.error('Server error:', message.message);
+            if (message.message.includes('Chat is full') || message.message.includes('Username already taken')) {
+              socket.close();
+              initialContainer.classList.remove('hidden');
+              usernameContainer.classList.add('hidden');
+              connectContainer.classList.add('hidden');
+              codeDisplayElement.classList.add('hidden');
+              chatContainer.classList.add('hidden');
+              newSessionButton.classList.add('hidden');
+              maxClientsContainer.classList.add('hidden');
+              clearTimeout(joinTimeout);
+            }
+            return;
+          }
+          if (message.type === 'init') {
+            clientId = message.clientId;
+            maxClients = message.maxClients;
+            isInitiator = message.isInitiator;
+            totalClients = 1;
+            console.log(`Initialized client ${clientId}, username: ${username}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
+            usernames.set(clientId, username);
+            console.log(`Set own username: ${username} for client ${clientId}, usernames: ${[...usernames.entries()]}`);
+            initializeMaxClientsUI();
+            updateMaxClientsUI();
+          }
+          if (message.type === 'initiator-changed') {
+            console.log(`Initiator changed to ${message.newInitiator} for code: ${code}`);
+            isInitiator = message.newInitiator === clientId;
+            initializeMaxClientsUI();
+            updateMaxClientsUI();
+          }
+          if (message.type === 'join-notify' && message.code === code) {
+            totalClients = message.totalClients;
+            console.log(`Join-notify received for code: ${code}, client: ${message.clientId}, total: ${totalClients}, maxClients: ${maxClients}, username: ${message.username}`);
+            if (message.username) {
+              usernames.set(message.clientId, message.username);
+              console.log(`Updated usernames: ${message.clientId} -> ${message.username}, usernames: ${[...usernames.entries()]}`);
+            }
+            updateMaxClientsUI();
+            clearTimeout(joinTimeout);
+            if (isInitiator && message.clientId !== clientId && !peerConnections.has(message.clientId)) {
+              console.log(`Initiating peer connection with client ${message.clientId}`);
+              startPeerConnection(message.clientId, true);
+            }
+          }
+          if (message.type === 'client-disconnected') {
+            totalClients = message.totalClients;
+            console.log(`Client ${message.clientId} disconnected from code: ${code}, total: ${totalClients}`);
+            usernames.delete(message.clientId);
+            console.log(`Removed username for client ${message.clientId}, usernames: ${[...usernames.entries()]}`);
+            cleanupPeerConnection(message.clientId);
+            updateMaxClientsUI();
+          }
+          if (message.type === 'max-clients') {
+            maxClients = message.maxClients;
+            console.log(`Max clients updated to ${maxClients} for code: ${code}`);
+            updateMaxClientsUI();
+          }
+          if (message.type === 'offer' && message.clientId !== clientId) {
+            console.log(`Received offer from ${message.clientId} for code: ${code}`);
+            handleOffer(message.offer, message.clientId);
+          }
+          if (message.type === 'answer' && message.clientId !== clientId) {
+            console.log(`Received answer from ${message.clientId} for code: ${code}`);
+            handleAnswer(message.answer, message.clientId);
+          }
+          if (message.type === 'candidate' && message.clientId !== clientId) {
+            console.log(`Received ICE candidate from ${message.clientId} for code: ${code}`);
+            handleCandidate(message.candidate, message.clientId);
+          }
+        } catch (error) {
+          console.error('Error parsing message:', error);
+        }
+      };
+    }
+
+    setupWebSocket();
 
     function initializeMaxClientsUI() {
       const maxClientsRadios = document.getElementById('maxClientsRadios');
@@ -468,7 +496,6 @@
         console.error(`Received invalid answer type from ${targetId}:`, answer.type);
         return;
       }
-      // Use SHA-256 hash of full SDP for deduplication
       const answerKey = await sha256(`${targetId}-${answer.sdp}`);
       if (processedAnswers.has(answerKey)) {
         console.log(`Duplicate answer from ${targetId} ignored: ${answerKey}`);
@@ -588,6 +615,11 @@
       statusElement.textContent = 'Waiting for connection...';
       console.log(`Starting chat with username: ${username}, code: ${code}`);
       socket.send(JSON.stringify({ type: 'join', code, username }));
+      joinTimeout = setTimeout(() => {
+        console.log(`Join timeout: no other clients joined code ${code}`);
+        statusElement.textContent = 'No one joined. Try a new session.';
+        newSessionButton.click();
+      }, 30000);
     };
 
     document.getElementById('connectButton').onclick = () => {
@@ -597,8 +629,8 @@
         statusElement.textContent = 'Invalid username: 1-16 alphanumeric characters required.';
         return;
       }
-      if (!inputCode) {
-        statusElement.textContent = 'Please enter a valid code.';
+      if (!validateCode(inputCode)) {
+        statusElement.textContent = 'Invalid code format: use xxxx-xxxx-xxxx-xxxx.';
         return;
       }
       username = usernameInput;
@@ -611,18 +643,25 @@
       statusElement.textContent = 'Connecting...';
       console.log(`Connecting with username: ${username}, code: ${code}`);
       socket.send(JSON.stringify({ type: 'join', code, username }));
+      joinTimeout = setTimeout(() => {
+        console.log(`Join timeout: failed to connect to code ${code}`);
+        statusElement.textContent = 'Connection failed. Try a new session.';
+        newSessionButton.click();
+      }, 30000);
     };
 
     document.getElementById('backButton').onclick = () => {
       usernameContainer.classList.add('hidden');
       initialContainer.classList.remove('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
+      clearTimeout(joinTimeout);
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
       connectContainer.classList.add('hidden');
       initialContainer.classList.remove('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
+      clearTimeout(joinTimeout);
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -673,6 +712,7 @@
       chatContainer.classList.add('hidden');
       newSessionButton.classList.add('hidden');
       maxClientsContainer.classList.add('hidden');
+      clearTimeout(joinTimeout);
       socket.send(JSON.stringify({ type: 'join' }));
     };
 
