--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       user-select: text; /* Allows copying the code text */
     }
 
+    body {
+      min-height: 100vh;
+      padding-top: 150px; /* Increased top padding to create more space above white box */
+    }
+
     #messages {
       display: flex;
       flex-direction: column-reverse;
@@ -64,15 +69,13 @@
       .corner-logo {
         position: absolute;
         top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
+        right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 1000; /* Ensure it stays above chat on mobile */
+        z-index: 100; /* Ensure it stays above but scrolls with page */
       }
-      #chatContainer.in-chat .corner-logo {
-        position: fixed; /* Keep logo fixed above chat box on mobile when in chat */
-        top: 10px;
+      body {
+        padding-top: 180px; /* Increased top padding for mobile to give more space */
       }
     }
     .message-bubble {
@@ -104,10 +107,6 @@
       flex-direction: column;
       gap: 0.5rem;
       position: relative;
-    }
-    #chatContainer.in-chat {
-      position: relative;
-      z-index: 0; /* Ensure chat stays below fixed logo on mobile */
     }
     .input-container {
       display: flex;
@@ -174,10 +173,11 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      padding: 0.25rem 0.75rem;
+      padding: 0.15rem 0.4rem; /* Further reduced padding to make it smaller */
       border-radius: 0.375rem;
-      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
       cursor: pointer; /* Ensure pointer cursor for button */
+      float: right; /* Position on the right */
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -611,7 +611,6 @@
         newSessionButton.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
-        chatContainer.classList.add('in-chat'); // Add in-chat class when chat is active
         clearTimeout(connectionTimeouts.get(targetId));
         retryCounts.delete(targetId);
         updateMaxClientsUI();
@@ -675,7 +674,6 @@
         if (dataChannels.size === 0) {
           inputContainer.classList.add('hidden');
           messages.classList.add('waiting');
-          chatContainer.classList.remove('in-chat'); // Remove in-chat class when disconnected
         }
       };
     }
@@ -783,7 +781,6 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
-        chatContainer.classList.remove('in-chat'); // Remove in-chat class when disconnected
       }
     }
 
@@ -880,7 +877,6 @@
       messages.classList.remove('waiting');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
-      chatContainer.classList.remove('in-chat'); // Remove in-chat class when going back
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
@@ -890,7 +886,6 @@
       messages.classList.remove('waiting');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
-      chatContainer.classList.remove('in-chat'); // Remove in-chat class when going back
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -963,7 +958,6 @@
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
-      chatContainer.classList.remove('in-chat'); // Remove in-chat class for new session
     };
 
     document.getElementById('usernameInput').addEventListener('keydown', (event) => {
@@ -998,6 +992,24 @@
         console.error('Failed to copy text: ', err);
       });
     };
+
+    // Add back button functionality after starting a new chat
+    const backButtonAfterCode = document.createElement('button');
+    backButtonAfterCode.textContent = 'Back';
+    backButtonAfterCode.className = 'bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors';
+    backButtonAfterCode.onclick = () => {
+      codeDisplayElement.classList.add('hidden');
+      copyCodeButton.classList.add('hidden');
+      usernameContainer.classList.remove('hidden');
+      chatContainer.classList.add('hidden');
+      messages.classList.remove('waiting');
+      statusElement.textContent = 'Enter a username to start a chat';
+    };
+    document.getElementById('startChatButton').addEventListener('click', () => {
+      if (!codeDisplayElement.classList.contains('hidden')) {
+        document.querySelector('.bg-white').appendChild(backButtonAfterCode);
+      }
+    });
   </script>
 </body>
 </html>
