--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
     body {
       min-height: 100vh;
-      padding-top: 150px; /* Increased top padding to create more space above white box */
+      padding-top: 100px; /* Reduced to push content down, enabling scroll */
+      background-color: #000;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
     }
 
     #messages {
@@ -38,16 +42,21 @@
       border-radius: 0.5rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
-      height: 256px;
-      background-color: #fce7f3;
+      height: 512px; /* Doubled from 256px to 512px */
+      background-color: transparent; /* Default to transparent */
       background-image: none;
       background-size: 100% 100%;
       background-position: center;
       background-repeat: no-repeat;
     }
+    #chatContainer #messages { /* Apply pink background only when in chatContainer */
+      background-color: #fce7f3;
+    }
     #messages.waiting {
       background-color: transparent;
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG?sanitize=true');
+      background-size: contain;
+      background-position: center;
     }
     .corner-logo {
       position: absolute;
@@ -67,15 +76,17 @@
     }
     @media (max-width: 640px) {
       .corner-logo {
-        position: absolute;
         top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 100; /* Ensure it stays above but scrolls with page */
+        z-index: 100;
       }
       body {
-        padding-top: 180px; /* Increased top padding for mobile to give more space */
+        padding-top: 120px; /* Adjusted for mobile */
+      }
+      #messages {
+        height: 400px; /* Doubled from 200px to 400px for mobile */
       }
     }
     .message-bubble {
@@ -107,6 +118,7 @@
       flex-direction: column;
       gap: 0.5rem;
       position: relative;
+      min-height: 100vh; /* Ensure full height for scrolling */
     }
     .input-container {
       display: flex;
@@ -173,11 +185,10 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      padding: 0.15rem 0.4rem; /* Further reduced padding to make it smaller */
+      padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
-      margin-bottom: 0.5rem;
-      cursor: pointer; /* Ensure pointer cursor for button */
-      float: right; /* Position on the right */
+      margin-top: 0.5rem;
+      cursor: pointer;
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -992,24 +1003,6 @@
         console.error('Failed to copy text: ', err);
       });
     };
-
-    // Add back button functionality after starting a new chat
-    const backButtonAfterCode = document.createElement('button');
-    backButtonAfterCode.textContent = 'Back';
-    backButtonAfterCode.className = 'bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors';
-    backButtonAfterCode.onclick = () => {
-      codeDisplayElement.classList.add('hidden');
-      copyCodeButton.classList.add('hidden');
-      usernameContainer.classList.remove('hidden');
-      chatContainer.classList.add('hidden');
-      messages.classList.remove('waiting');
-      statusElement.textContent = 'Enter a username to start a chat';
-    };
-    document.getElementById('startChatButton').addEventListener('click', () => {
-      if (!codeDisplayElement.classList.contains('hidden')) {
-        document.querySelector('.bg-white').appendChild(backButtonAfterCode);
-      }
-    });
   </script>
 </body>
 </html>
