--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     body {
       min-height: 100vh;
       padding-top: 150px; /* Increased top padding to create more space above white box */
+      background-color: #000000; /* Note: Background black */
     }
 
     #messages {
@@ -38,7 +39,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
       height: 256px;
-      background-color: #fce7f3;
+      background-color: #fce7f3; /* Note: Message box pink */
       background-image: none;
       background-size: 100% 100%;
       background-position: center;
@@ -86,13 +87,13 @@
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
     .message-bubble.self {
-      background-color: #3b82f6;
+      background-color: #3b82f6; /* Note: Bubble blue (self) */
       color: white;
       margin-left: auto;
       border-bottom-right-radius: 0.25rem;
     }
     .message-bubble.other {
-      background-color: #e5e7eb;
+      background-color: #e5e7eb; /* Note: Bubble light gray (other) */
       color: #1f2937;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
@@ -129,7 +130,7 @@
       line-height: 1.5rem;
       width: 100%;
       max-width: 100%;
-      background-color: #3b82f6;
+      background-color: #3b82f6; /* Note: Input blue */
       color: white;
       border-radius: 1rem;
       padding: 0.5rem 1rem;
@@ -156,7 +157,7 @@
     #sendButton {
       width: 2.5rem;
       height: 2.5rem;
-      background-color: #2563eb;
+      background-color: #2563eb; /* Note: Send button blue */
       color: white;
       border-radius: 50%;
       display: flex;
@@ -170,7 +171,7 @@
       background-color: #1d4ed8;
     }
     #copyCodeButton {
-      background-color: #10b981;
+      background-color: #10b981; /* Note: Copy button green */
       color: white;
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
@@ -179,6 +180,21 @@
     }
     #copyCodeButton:hover {
       background-color: #059669;
+    }
+    #newSessionButton {
+      background-color: #ef4444; /* Note: New session button red */
+      color: white;
+      width: 2.5rem;
+      height: 2.5rem;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 0.5rem;
+      cursor: pointer;
+    }
+    #newSessionButton:hover {
+      background-color: #dc2626;
     }
   </style>
 </head>
@@ -206,6 +222,7 @@
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
           <button id="sendButton">📤</button>
         </div>
+        <button id="newSessionButtonConnected" class="bg-ef4444 text-white w-10 h-10 rounded-full flex items-center justify-center mt-2 hover:bg-dc2626 hidden">New</button>
       </div>
       <div id="connectContainer" class="hidden">
         <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
@@ -273,6 +290,7 @@
     const connectContainer = document.getElementById('connectContainer');
     const chatContainer = document.getElementById('chatContainer');
     const newSessionButton = document.getElementById('newSessionButton');
+    const newSessionButtonConnected = document.getElementById('newSessionButtonConnected');
     const maxClientsContainer = document.getElementById('maxClientsContainer');
     const inputContainer = document.querySelector('.input-container');
     const messages = document.getElementById('messages');
@@ -348,6 +366,7 @@
             copyCodeButton.classList.add('hidden');
             chatContainer.classList.add('hidden');
             newSessionButton.classList.add('hidden');
+            newSessionButtonConnected.classList.add('hidden');
             maxClientsContainer.classList.add('hidden');
             inputContainer.classList.add('hidden');
             messages.classList.remove('waiting');
@@ -455,8 +474,10 @@
       maxClientsContainer.classList.toggle('hidden', !isInitiator);
       if (!isConnected) {
         messages.classList.add('waiting');
+        newSessionButtonConnected.classList.add('hidden');
       } else {
         messages.classList.remove('waiting');
+        newSessionButtonConnected.classList.remove('hidden');
       }
     }
 
@@ -606,7 +627,8 @@
         usernameContainer.classList.add('hidden');
         connectContainer.classList.add('hidden');
         chatContainer.classList.remove('hidden');
-        newSessionButton.classList.remove('hidden');
+        newSessionButton.classList.add('hidden');
+        newSessionButtonConnected.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
         clearTimeout(connectionTimeouts.get(targetId));
@@ -672,6 +694,7 @@
         if (dataChannels.size === 0) {
           inputContainer.classList.add('hidden');
           messages.classList.add('waiting');
+          newSessionButtonConnected.classList.add('hidden');
         }
       };
     }
@@ -779,6 +802,7 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
+        newSessionButtonConnected.classList.add('hidden');
       }
     }
 
@@ -919,7 +943,7 @@
       }
     });
 
-    document.getElementById('newSessionButton').onclick = () => {
+    document.getElementById('newSessionButtonConnected').onclick = () => {
       socket.send(JSON.stringify({ type: 'leave', code, clientId }));
       peerConnections.forEach((pc) => pc.close());
       dataChannels.forEach((dc) => dc.close());
@@ -953,6 +977,7 @@
       connectContainer.classList.add('hidden');
       chatContainer.classList.add('hidden');
       newSessionButton.classList.add('hidden');
+      newSessionButtonConnected.classList.add('hidden');
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
