--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +26,6 @@
     body {
       min-height: 100vh;
       padding-top: 150px; /* Increased top padding to create more space above white box */
-      background-color: #000000; /* Note: Background black */
     }
 
     #messages {
@@ -39,7 +39,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
       height: 256px;
-      background-color: #fce7f3; /* Note: Message box pink */
+      background-color: #fce7f3;
       background-image: none;
       background-size: 100% 100%;
       background-position: center;
@@ -87,13 +87,13 @@
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
     .message-bubble.self {
-      background-color: #3b82f6; /* Note: Bubble blue (self) */
+      background-color: #3b82f6;
       color: white;
       margin-left: auto;
       border-bottom-right-radius: 0.25rem;
     }
     .message-bubble.other {
-      background-color: #e5e7eb; /* Note: Bubble light gray (other) */
+      background-color: #e5e7eb;
       color: #1f2937;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
@@ -130,7 +130,7 @@
       line-height: 1.5rem;
       width: 100%;
       max-width: 100%;
-      background-color: #3b82f6; /* Note: Input blue */
+      background-color: #3b82f6;
       color: white;
       border-radius: 1rem;
       padding: 0.5rem 1rem;
@@ -157,7 +157,7 @@
     #sendButton {
       width: 2.5rem;
       height: 2.5rem;
-      background-color: #2563eb; /* Note: Send button blue */
+      background-color: #2563eb;
       color: white;
       border-radius: 50%;
       display: flex;
@@ -171,7 +171,7 @@
       background-color: #1d4ed8;
     }
     #copyCodeButton {
-      background-color: #10b981; /* Note: Copy button green */
+      background-color: #10b981;
       color: white;
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
@@ -180,17 +180,6 @@
     }
     #copyCodeButton:hover {
       background-color: #059669;
-    }
-    #newSessionButton {
-      background-color: #ef4444; /* Note: New session button red */
-      color: white;
-      padding: 0.25rem 0.75rem;
-      border-radius: 0.375rem;
-      margin-top: 0.5rem;
-      cursor: pointer;
-    }
-    #newSessionButton:hover {
-      background-color: #dc2626;
     }
   </style>
 </head>
@@ -218,7 +207,6 @@
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
           <button id="sendButton">📤</button>
         </div>
-        <button id="newSessionButtonConnected" class="bg-ef4444 text-white px-2 py-1 rounded-md flex items-center justify-center mt-2 hover:bg-dc2626 hidden">New Session</button>
       </div>
       <div id="connectContainer" class="hidden">
         <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
@@ -286,7 +274,6 @@
     const connectContainer = document.getElementById('connectContainer');
     const chatContainer = document.getElementById('chatContainer');
     const newSessionButton = document.getElementById('newSessionButton');
-    const newSessionButtonConnected = document.getElementById('newSessionButtonConnected');
     const maxClientsContainer = document.getElementById('maxClientsContainer');
     const inputContainer = document.querySelector('.input-container');
     const messages = document.getElementById('messages');
@@ -362,7 +349,6 @@
             copyCodeButton.classList.add('hidden');
             chatContainer.classList.add('hidden');
             newSessionButton.classList.add('hidden');
-            newSessionButtonConnected.classList.add('hidden');
             maxClientsContainer.classList.add('hidden');
             inputContainer.classList.add('hidden');
             messages.classList.remove('waiting');
@@ -403,7 +389,8 @@
           usernames.delete(message.clientId);
           cleanupPeerConnection(message.clientId);
           updateMaxClientsUI();
-          if (totalClients <= 1) {
+          if (totalClients <= 1 && isConnected) {
+            messages.innerHTML = ''; // Clear chat when only one connection remains
             inputContainer.classList.add('hidden');
             messages.classList.add('waiting');
           }
@@ -470,10 +457,8 @@
       maxClientsContainer.classList.toggle('hidden', !isInitiator);
       if (!isConnected) {
         messages.classList.add('waiting');
-        newSessionButtonConnected.classList.add('hidden');
       } else {
         messages.classList.remove('waiting');
-        newSessionButtonConnected.classList.remove('hidden');
       }
     }
 
@@ -623,8 +608,7 @@
         usernameContainer.classList.add('hidden');
         connectContainer.classList.add('hidden');
         chatContainer.classList.remove('hidden');
-        newSessionButton.classList.add('hidden');
-        newSessionButtonConnected.classList.remove('hidden');
+        newSessionButton.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
         clearTimeout(connectionTimeouts.get(targetId));
@@ -690,7 +674,6 @@
         if (dataChannels.size === 0) {
           inputContainer.classList.add('hidden');
           messages.classList.add('waiting');
-          newSessionButtonConnected.classList.add('hidden');
         }
       };
     }
@@ -798,7 +781,7 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
-        newSessionButtonConnected.classList.add('hidden');
+        messages.innerHTML = ''; // Clear chat on connection lost
       }
     }
 
@@ -939,7 +922,7 @@
       }
     });
 
-    document.getElementById('newSessionButtonConnected').onclick = () => {
+    document.getElementById('newSessionButton').onclick = () => {
       socket.send(JSON.stringify({ type: 'leave', code, clientId }));
       peerConnections.forEach((pc) => pc.close());
       dataChannels.forEach((dc) => dc.close());
@@ -973,7 +956,6 @@
       connectContainer.classList.add('hidden');
       chatContainer.classList.add('hidden');
       newSessionButton.classList.add('hidden');
-      newSessionButtonConnected.classList.add('hidden');
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
