--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     body {
       min-height: 100vh;
       padding-top: 150px; /* Increased top padding to create more space above white box */
+      background-color: #000000; /* Note: Background black */
     }
 
     #messages {
@@ -38,7 +39,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
       height: 256px;
-      background-color: #fce7f3;
+      background-color: #fce7f3; /* Note: Message box pink */
       background-image: none;
       background-size: 100% 100%;
       background-position: center;
@@ -86,13 +87,13 @@
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
     .message-bubble.self {
-      background-color: #3b82f6;
+      background-color: #3b82f6; /* Note: Bubble blue (self) */
       color: white;
       margin-left: auto;
       border-bottom-right-radius: 0.25rem;
     }
     .message-bubble.other {
-      background-color: #e5e7eb;
+      background-color: #e5e7eb; /* Note: Bubble light gray (other) */
       color: #1f2937;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
@@ -129,7 +130,7 @@
       line-height: 1.5rem;
       width: 100%;
       max-width: 100%;
-      background-color: #3b82f6;
+      background-color: #3b82f6; /* Note: Input blue */
       color: white;
       border-radius: 1rem;
       padding: 0.5rem 1rem;
@@ -156,7 +157,7 @@
     #sendButton {
       width: 2.5rem;
       height: 2.5rem;
-      background-color: #2563eb;
+      background-color: #2563eb; /* Note: Send button blue */
       color: white;
       border-radius: 50%;
       display: flex;
@@ -170,7 +171,7 @@
       background-color: #1d4ed8;
     }
     #copyCodeButton {
-      background-color: #10b981;
+      background-color: #10b981; /* Note: Copy button green */
       color: white;
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
@@ -179,6 +180,17 @@
     }
     #copyCodeButton:hover {
       background-color: #059669;
+    }
+    #newSessionButton {
+      background-color: #ef4444; /* Note: New session button red */
+      color: white;
+      padding: 0.25rem 2rem; /* Original padding */
+      border-radius: 0.375rem;
+      margin-top: 0.5rem;
+      cursor: pointer; /* Ensure pointer cursor for button */
+    }
+    #newSessionButton:hover {
+      background-color: #dc2626;
     }
   </style>
 </head>
